offertbar - first part done

--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -12,6 +12,7 @@
 @import "components/featuresRow";
 @import "components/btn";
 @import "components/carbar";
+@import "components/offertsbar";
 
 @import "layout/mainLayout";
 
