--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -11,3 +11,11 @@ $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
 
 $font-size-nav-button: 2rem;
+$font-size-title: 8rem;
+$font-size-subtitle: 3rem;
+
+$font-size-normal: 2rem;
+$font-size-l: 2.6rem;
+$font-size-big: 3rem;
+$font-size-bigger: 3.5rem;
+$font-size-large: 5.5rem;
