--- a/src/scss/components/_featuresRow.scss
+++ b/src/scss/components/_featuresRow.scss
@@ -14,11 +14,11 @@
 		text-align: center;
 		margin-top: 20rem;
 		margin-bottom: 2rem;
-		font-size: 3.3rem;
+		font-size: $font-size-subtitle;
 	}
 
 	&__title {
-		font-size: 8rem;
+		font-size: $font-size-title;
 		text-align: center;
 	}
 
