imagebar - alfa added

--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -13,6 +13,7 @@
 @import "components/btn";
 @import "components/carbar";
 @import "components/offertsbar";
+@import "components/imagebar";
 
 @import "layout/mainLayout";
 
