--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,7 +8,7 @@
 		),
 		url(../../img/auto-6.jpeg);
 	background-size: cover;
-	background-position-y: -25rem;
+	background-position: center;
 	filter: saturate(2);
 
 	display: flex;
