--- a/src/scss/components/_carbar.scss
+++ b/src/scss/components/_carbar.scss
@@ -2,15 +2,25 @@
 	grid-row: 4/5;
 	grid-column: full-start / full-end;
 	margin-top: 3rem;
-	padding: 10rem 15rem 30rem;
+	padding: 10rem 25rem 25rem 20rem;
 	background-color: antiquewhite;
+	background-image: linear-gradient(
+			to bottom right,
+			rgba(250, 235, 215, 0.8),
+			#f7bf75d8
+		),
+		url(../../img/tlo.jpg);
+	background-position: center;
+	background-size: cover;
 	cursor: pointer;
 	clip-path: polygon(0% 10%, 100% 0%, 100% 90%, 0% 100%);
 
 	&-title {
 		font-size: $font-size-large;
-		padding-top: 12rem;
-		margin-left: 14rem;
+		padding-top: 8rem;
+		margin-bottom: -4rem;
+		margin-left: 5rem;
+		text-align: center;
 		font-weight: bold;
 	}
 	&-wrapper {
@@ -24,6 +34,7 @@
 	perspective: 600rem;
 	position: relative;
 	z-index: 20;
+	width: 115%;
 
 	&__side {
 		font-size: $font-size-big;
@@ -169,7 +180,7 @@
 	}
 
 	&:hover &__side--back {
-		transform: rotateY(0) scale(0.9);
+		transform: rotateY(0) scale(0.85);
 		font-weight: bold;
 	}
 }
