--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -4,8 +4,11 @@
 		$color-white-dark -10%,
 		$color-gold 100%
 	);
+	// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
+
 	padding: 2rem 3.5rem;
 	border: none;
+	border-radius: 5px;
 	font-size: 2.5rem;
 	font-weight: bold;
 	color: white;
