--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -14,6 +14,7 @@
 @import "components/carbar";
 @import "components/offertsbar";
 @import "components/imagebar";
+@import "components/pricelist";
 
 @import "layout/mainLayout";
 
