--- a/src/scss/components/_carbar.scss
+++ b/src/scss/components/_carbar.scss
@@ -22,6 +22,7 @@
 		margin-left: 5rem;
 		text-align: center;
 		font-weight: bold;
+		color: white;
 	}
 	&-wrapper {
 		display: grid;
@@ -72,8 +73,8 @@
 			align-items: center;
 			color: #f9f7f6;
 			font-size: $font-size-bigger;
-			background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
-
+			// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
+			background: linear-gradient(to right bottom, #eee -200%, #7a4d3f63 75%);
 			// background: linear-gradient(
 			// 	to right bottom,
 			// 	$color-white-dark -10%,
@@ -167,7 +168,7 @@
 			transform: translateX(-50%);
 			cursor: pointer;
 			border-radius: 5px;
-			background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
+			// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
 
 			&:hover {
 				transform: translateX(-50%);
