--- a/src/scss/components/_imagebar.scss
+++ b/src/scss/components/_imagebar.scss
@@ -69,7 +69,7 @@
 
 	&-button {
 		position: absolute;
-		background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
+		// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
 
 		&-alfa {
 			bottom: 15rem;
