--- a/src/scss/layout/_mainLayout.scss
+++ b/src/scss/layout/_mainLayout.scss
@@ -1,6 +1,6 @@
 .container {
 	display: grid;
-	grid-template-rows: 10rem 85vh min-content min-content min-content min-content min-content 60vh min-content;
+	grid-template-rows: 10rem 85vh min-content min-content min-content min-content min-content min-content 80vh;
 	grid-template-columns:
 		[full-start] minmax(6rem, 1fr) [center-start] repeat(
 			8,
