--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -15,6 +15,7 @@
 @import "components/offertsbar";
 @import "components/imagebar";
 @import "components/pricelist";
+@import "components/footer";
 
 @import "layout/mainLayout";
 
