--- a/src/scss/components/_topbar.scss
+++ b/src/scss/components/_topbar.scss
@@ -1,4 +1,6 @@
 .topbar {
+	// position: fixed;
+	// z-index: 2;
 	background-color: black;
 	grid-column: full-start / full-end;
 	grid-row: 1 / 2;
