--- a/src/scss/layout/_mainLayout.scss
+++ b/src/scss/layout/_mainLayout.scss
@@ -1,10 +1,17 @@
 .container {
 	display: grid;
-	grid-template-rows: 10rem 85vh min-content min-content min-content min-content min-content min-content 80vh;
+	grid-template-rows: 10rem 85vh min-content min-content min-content min-content min-content max-content;
 	grid-template-columns:
 		[full-start] minmax(6rem, 1fr) [center-start] repeat(
 			8,
 			[col-start] minmax(min-content, 14rem) [col-end]
 		)
 		[center-end] minmax(6rem, 1fr) [full-end];
+
+	min-height: 100vh;
+
+	position: relative;
+	background-color: white;
+	z-index: 1;
+	box-shadow: 1rem 1.5rem 5rem 2rem rgba(#fff, 0.2);
 }
