background image rerender fixed

--- a/src/scss/components/_carbar.scss
+++ b/src/scss/components/_carbar.scss
@@ -16,6 +16,8 @@
 			#f7bf75d8 140%
 		),
 		url(../../img/tlo.jpg);
+	background-attachment: fixed;
+
 	background-position: center;
 	background-size: cover;
 	cursor: pointer;
