--- a/src/scss/components/_imagebar.scss
+++ b/src/scss/components/_imagebar.scss
@@ -11,6 +11,7 @@
 	justify-content: flex-end;
 	margin-top: -20rem;
 	margin-top: 8rem;
+	background-attachment: fixed;
 }
 .imagebar__alfa {
 	grid-row: 5/6;
@@ -24,6 +25,7 @@
 		url(../../img/alfa-tlo.jpg);
 	justify-content: flex-start;
 	margin-top: -8rem;
+	background-attachment: fixed;
 }
 
 .imagebar {
