--- a/src/scss/components/_topbar.scss
+++ b/src/scss/components/_topbar.scss
@@ -43,6 +43,7 @@
 	background-color: transparent;
 	border: none;
 	font-size: $font-size-nav-button;
+	font-weight: bold;
 	cursor: pointer;
 
 	&:hover {
