--- a/src/scss/components/_carbar.scss
+++ b/src/scss/components/_carbar.scss
@@ -1,7 +1,7 @@
 .carbar__wrapper {
 	grid-row: 6/7;
 	grid-column: full-start / full-end;
-	margin-top: -8rem;
+	margin-top: -5.4rem;
 	padding: 5rem 25rem 20rem 20rem;
 	background-color: antiquewhite;
 	// background-image: linear-gradient(
@@ -21,15 +21,15 @@
 	background-position: center;
 	background-size: cover;
 	cursor: pointer;
-	clip-path: polygon(0% 8%, 100% 0%, 100% 94%, 0% 100%);
+	clip-path: polygon(0% 6%, 100% 0, 100% 96%, 0% 100%);
 
 	&-title {
-		font-size: 6.6rem;
+		font-size: $font-size-title;
 		padding-top: 8rem;
 		margin-bottom: -4rem;
 		margin-left: 5rem;
 		text-align: center;
-		font-weight: bold;
+		font-weight: 300;
 		color: white;
 	}
 	&-wrapper {
@@ -62,25 +62,26 @@
 
 		&-picture {
 			width: 100%;
-			height: 85%;
+			height: 82%;
 			object-fit: cover;
 			display: block;
 			border-top-right-radius: 10px;
 			border-top-left-radius: 10px;
-			padding: 1rem;
+			// padding: 1rem;
 			background-color: white;
+			padding: 0.5rem;
 		}
 
 		&-text {
-			height: 15%;
+			height: 18%;
 			justify-content: center;
-			padding: 0.7rem;
+			padding: 0.5rem;
 			font-weight: bold;
 			display: flex;
 			justify-content: center;
 			align-items: center;
 			color: #f9f7f6;
-			font-size: $font-size-bigger;
+			font-size: $font-size-l;
 			// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
 			background: linear-gradient(to right bottom, #eee -200%, #7a4d3f63 75%);
 			// background: linear-gradient(
@@ -94,14 +95,14 @@
 
 		&__small-picture {
 			width: 80%;
-			height: 23%;
-			margin: 3rem auto 1rem;
+			height: 20%;
+			margin: 3rem auto 0;
 			border-radius: 5px;
 			filter: drop-shadow(4px 6px 4px grey);
 		}
 
 		&-title {
-			font-size: $font-size-l;
+			font-size: $font-size-normal;
 			&-big-gold {
 				color: $color-gold;
 			}
@@ -118,20 +119,20 @@
 		}
 
 		&-subtitle {
-			font-size: $font-size-l;
+			font-size: $font-size-normal;
 			color: rgba(255, 0, 0, 0.651);
-			padding-bottom: 1.5rem;
+			padding-bottom: 0.5rem;
 		}
 
 		&-paragraph {
-			font-size: $font-size-normal;
+			font-size: $font-size-small;
 			text-align: justify;
 			text-indent: 3rem;
 			border-top: 1px solid lightgray;
 			border-bottom: 1px solid lightgray;
-			margin: 0 6rem;
-			padding: 4rem 0 5rem;
-			line-height: 2;
+			margin: 0 5rem;
+			padding: 1rem 0;
+			line-height: 1.8;
 		}
 
 		&--front {
@@ -146,9 +147,9 @@
 
 		&__bottom {
 			display: flex;
-			font-size: $font-size-normal;
+			font-size: $font-size-small;
 			justify-content: space-around;
-			padding: 2rem;
+			padding: 1rem;
 			&-left {
 				display: flex;
 				flex-direction: column;
@@ -171,11 +172,13 @@
 		&__button {
 			width: 80%;
 			position: absolute;
-			bottom: 4rem;
+			bottom: 3rem;
 			left: 50%;
 			transform: translateX(-50%);
 			cursor: pointer;
 			border-radius: 5px;
+			padding: 1rem 3.5rem;
+
 			// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
 
 			&:hover {
