--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -10,10 +10,11 @@ $color-secondary: #1a1e22;
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
 
-$font-size-nav-button: 2rem;
-$font-size-title: 8rem;
-$font-size-subtitle: 3rem;
+$font-size-nav-button: 1.5rem;
+$font-size-title: 6rem;
+$font-size-subtitle: 2rem;
 
+$font-size-small: 1.6rem;
 $font-size-normal: 2rem;
 $font-size-l: 2.6rem;
 $font-size-big: 3rem;
