--- a/src/scss/components/_imagebar.scss
+++ b/src/scss/components/_imagebar.scss
@@ -15,7 +15,7 @@
 }
 .imagebar__alfa {
 	grid-row: 5/6;
-	clip-path: polygon(0% 0%, 100% 10%, 100% 90%, 0% 100%);
+	clip-path: polygon(0% 0%, 100% 10%, 100% 91%, 0% 100%);
 
 	background-image: linear-gradient(
 			to right top,
@@ -24,12 +24,11 @@
 		),
 		url(../../img/alfa-tlo.jpg);
 	justify-content: flex-start;
-	margin-top: -8rem;
+	margin-top: -6rem;
 	background-attachment: fixed;
 }
 
 .imagebar {
-	// grid-row: 6/7;
 	grid-column: full-start/full-end;
 	height: 90vh;
 	display: flex;
@@ -46,41 +45,43 @@
 		justify-content: center;
 		font-weight: bold;
 		color: white;
-		margin: 0 10rem;
 		width: 45%;
 
 		&-alfa {
+			margin-top: -5rem;
 		}
 
 		&-camaro {
-			margin-top: -20rem;
+			margin-top: -12rem;
 		}
 	}
 
 	&-title {
-		font-size: 6rem;
+		font-size: 3.2rem;
 	}
 
 	&-text {
 		text-align: justify;
-		line-height: 5rem;
-		font-size: 3rem;
+		line-height: 1.8;
+		font-size: 2rem;
 		text-indent: 5rem;
-		padding: 2rem 10rem;
+		padding: 1rem 10rem;
+		// width: 80%;
 	}
 
 	&-button {
 		position: absolute;
+		padding: 1rem 2rem;
 		// background: linear-gradient(to right bottom, #eee -200%, #7a4d3f 75%);
 
 		&-alfa {
-			bottom: 15rem;
-			left: 20%;
+			bottom: 10rem;
+			left: 15%;
 		}
 
 		&-camaro {
-			bottom: 18rem;
-			right: 20%;
+			bottom: 15rem;
+			right: 15%;
 		}
 
 		&:hover {
