--- a/src/scss/components/_offertsbar.scss
+++ b/src/scss/components/_offertsbar.scss
@@ -1,7 +1,7 @@
 .offertbar {
 	grid-row: 7/8;
 	grid-column: full-start / full-end;
-	padding: 5rem 15rem 20rem;
+	padding: 5rem 15rem 15rem;
 
 	&__title {
 		font-size: $font-size-title;
@@ -16,8 +16,8 @@
 
 	&__card {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-		grid-gap: 8rem;
+		grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+		grid-gap: 5rem;
 		height: 70vh;
 		padding: 2rem;
 		border-radius: 10px;
@@ -117,18 +117,24 @@
 
 		&-title {
 			text-align: center;
-			padding: 3rem;
-			font-size: $font-size-l;
+			padding: 2rem;
+			font-size: $font-size-small;
 			font-weight: bold;
 		}
 
 		&-paragraph {
 			text-align: justify;
-			text-indent: 3rem;
+			text-indent: 2rem;
 			padding: 0 3rem 3rem;
-			font-size: $font-size-normal;
+			font-size: 1.4rem;
 			border-bottom-left-radius: 10px;
 			border-bottom-right-radius: 10px;
 		}
 	}
 }
+
+// .clearfix::after {
+// 	display: table;
+// 	content: "";
+// 	clear: both;
+// }
