--- a/src/scss/components/_pricelist.scss
+++ b/src/scss/components/_pricelist.scss
@@ -1,32 +1,33 @@
 .pricelist {
 	grid-row: 8/9;
 	grid-column: full-start / full-end;
-	height: 80vh;
+	height: 60vh;
 	margin-bottom: 60rem;
 
 	&__title {
 		text-align: center;
-		font-size: 8rem;
+		font-size: 6rem;
 	}
 
 	&__container {
 		display: grid;
 		grid-template-columns: repeat(14, 1fr);
 		// grid-template-rows: repeat(10, 1fr);
-		grid-gap: 4rem;
+		grid-gap: 3rem;
 
 		grid-column: center-start / center-end;
-		font-size: 3rem;
+		font-size: 1.8rem;
 		border-radius: 10px;
 
 		border: 1px solid;
-		padding: 10rem 0;
-		margin: 0 10rem;
+		padding: 4rem 0;
+		margin: 0 5rem;
 
 		&-0 {
 			background-color: white;
 			grid-row: 2/ -1;
 			grid-column: 2 / span 3;
+			padding: 1rem;
 		}
 
 		&-1 {
@@ -34,6 +35,8 @@
 			grid-column: 5 / span 3;
 			transition: all 0.4s;
 			border-radius: 10px;
+			padding: 1rem;
+			border: 1px solid lightgray;
 
 			&:hover {
 				transform: scale(1.1);
@@ -50,6 +53,8 @@
 			grid-column: 8 / span 3;
 			transition: all 0.5s;
 			border-radius: 10px;
+			padding: 1rem;
+			border: 1px solid lightgray;
 
 			&:hover {
 				transform: scale(1.1);
@@ -66,6 +71,9 @@
 			grid-column: 11 / span 3;
 			transition: all 0.4s;
 			border-radius: 10px;
+			padding: 1rem;
+			border: 1px solid lightgray;
+
 			filter: grayscale(1);
 
 			&:hover {
@@ -83,7 +91,7 @@
 			grid-row: 2/3;
 			padding: 0 0 2rem;
 			text-align: center;
-			font-size: 3.5rem;
+			font-size: 1.8rem;
 
 			&:hover {
 				transform: scale(1);
@@ -92,12 +100,12 @@
 
 		&-picture {
 			&-0 {
-				height: 20rem;
-				margin: 2rem 3rem;
+				height: 10rem;
+				margin-bottom: 1rem;
 			}
 			&-1 {
-				height: 20rem;
-				margin: 2rem 3rem;
+				height: 10rem;
+				margin-bottom: 1rem;
 				@include picture;
 				filter: saturate(0.5);
 
@@ -108,8 +116,8 @@
 			}
 
 			&-2 {
-				height: 20rem;
-				margin: 2rem 3rem;
+				height: 10rem;
+				margin-bottom: 1rem;
 				@include picture;
 				filter: saturate(0.5);
 
@@ -120,8 +128,8 @@
 			}
 
 			&-3 {
-				height: 20rem;
-				margin: 2rem 3rem;
+				height: 10rem;
+				margin-bottom: 1rem;
 				@include picture;
 				filter: saturate(0.5);
 
@@ -138,7 +146,7 @@
 			padding: 0 0 4rem;
 
 			li {
-				font-size: 2.5rem;
+				font-size: 1.6rem;
 				padding: 1rem;
 				border-bottom: 1px solid;
 
@@ -155,6 +163,7 @@
 		&-button {
 			margin: 0 auto 4rem;
 			display: flex;
+			font-size: 1.4rem;
 		}
 	}
 }
